[package]
name = "rust-wasm-sokoban"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
gwg = { git = "https://github.com/not-fl3/good-web-game", package = "good-web-game" }
specs = { version = "0.15.0", features = ["specs-derive"] }
nalgebra = { version = "0.19", features = ["mint"] }
