[package]
name = "rust-wasm-sokoban"
version = "0.1.0"
authors = ["Antonio Yang <yanganto@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
colored = "2.0"
gwg = { git = "https://github.com/not-fl3/good-web-game", package = "good-web-game", features = ["log-impl"]  }
specs = { version = "0.15.0", features = ["specs-derive"] }
nalgebra = { version = "0.19", features = ["mint"] }
